--- a/date/2025-04/index.htm
+++ b/date/2025-04/index.htm
@@ -113,6 +113,96 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-10">
+                            <div class="col-md-3">
+                                <a href="/news/article-92894.htm" class="xcblog-blog-url">
+                                    <img alt="宠物粮食加工设备厂家有哪些品牌（宠物粮食加工设备厂家有哪些品牌的）" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-92894.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        宠物粮食加工设备厂家有哪些品牌（宠物粮食加工设备厂家有哪些品牌的）                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享宠物粮食加工设备厂家有哪些品牌的知识，其中也会对宠物粮食加工设备厂家有哪些品牌的进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：.                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-10">
+                            <div class="col-md-3">
+                                <a href="/news/article-92893.htm" class="xcblog-blog-url">
+                                    <img alt="猫粮狗粮生产加工（猫粮狗粮生产加工工艺）" src="/uploads/20241222-1/253352ea5161b569846edfcc6423bfa1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-92893.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        猫粮狗粮生产加工（猫粮狗粮生产加工工艺）                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享猫粮狗粮生产加工的知识，其中也会对猫粮狗粮生产加工工艺进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗粮加工厂需要什么证件.                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-10-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-10-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、欧洲、美国、新加坡、香港、韩国、加拿大等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-09">
+                            <div class="col-md-3">
+                                <a href="/news/article-92174.htm" class="xcblog-blog-url">
+                                    <img alt="成都宠物领养平台公众号（成都市宠物狗领养平台）" src="/uploads/20241222-1/a621dbd095b5853e39cd840d5e02d439.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-92174.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        成都宠物领养平台公众号（成都市宠物狗领养平台）                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈成都宠物领养平台公众号，以及成都市宠物狗领养平台对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、成都哪里有正规的宠物领养中心...                                    </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-09">
+                            <div class="col-md-3">
+                                <a href="/news/article-92172.htm" class="xcblog-blog-url">
+                                    <img alt="3.	Springmvc架构" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-92172.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        3.	Springmvc架构                                    </h3>
+                                </a>
+                                <p>
+                                    架构流程 1、 用户发送请求至前端控制器DispatcherServlet 2、 DispatcherServlet收到请求调用HandlerMapping处理器映射器。 3、 处理器映射器根据请求u                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-09">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月9日21M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月9日21M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、香港、日本、欧洲、韩国、新加坡、美国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-08">
                             <div class="col-md-3">
                                 <a href="/news/article-91378.htm" class="xcblog-blog-url">
@@ -173,96 +263,6 @@
                                     摘要：       今天给各位分享厦门宠物收养中心在哪的知识，其中也会对厦门宠物领养中心地址进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、厦门哪有宠物市场?.                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-07">
-                            <div class="col-md-3">
-                                <a href="/news/article-90692.htm" class="xcblog-blog-url">
-                                    <img alt="动物疫苗要打几针才有效呢 动物疫苗要打几针才有效呢视频" src="/uploads/20241222-1/a6739d732704eaa23f08687f69677fcf.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-90692.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        动物疫苗要打几针才有效呢 动物疫苗要打几针才有效呢视频                                    </h3>
-                                </a>
-                                <p>
-                                    摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗要打几针才有效呢的问题，于是小编就整理了3个相关介绍动物疫苗要打几针才有效呢的解答，让我们一起看看吧。小鹿犬多久打一次防                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-07">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、欧洲、日本、香港、美国、加拿大、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
-                            <div class="col-md-3">
-                                <a href="/news/article-89955.htm" class="xcblog-blog-url">
-                                    <img alt="宠物粮食加工厂设备哪的好点呢知乎 宠物粮食加工厂设备哪的好点呢知乎" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-89955.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        宠物粮食加工厂设备哪的好点呢知乎 宠物粮食加工厂设备哪的好点呢知乎                                    </h3>
-                                </a>
-                                <p>
-                                    摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物粮食加工厂设备哪的好点呢知乎的问题，于是小编就整理了2个相关介绍宠物粮食加工厂设备哪的好点呢知乎的解答，让我们一起看看吧。训                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
-                            <div class="col-md-3">
-                                <a href="/news/article-89954.htm" class="xcblog-blog-url">
-                                    <img alt="开宠物店累不累人（一般开宠物店挣不挣）" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-89954.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        开宠物店累不累人（一般开宠物店挣不挣）                                    </h3>
-                                </a>
-                                <p>
-                                    摘要：       今天给各位分享开宠物店累不累人的知识，其中也会对一般开宠物店挣不挣进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、说说开宠物店是种怎样的体.                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、新加坡、欧洲、韩国、美国、日本、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-05">
-                            <div class="col-md-3">
-                                <a href="/news/article-89236.htm" class="xcblog-blog-url">
-                                    <img alt="Apache Hudi 如何加速传统的批处理模式" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-89236.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        Apache Hudi 如何加速传统的批处理模式                                    </h3>
-                                </a>
-                                <p>
-                                    1.1 数据湖摄取和计算过程 - 处理更新 在我们的用例中1-10% 是对历史记录的更新。当记录更新时，我们需要从之前的 updated_date 分区中删除之前的条目，并将条目添加到最新的分区中，在                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-04/page-2.htm">2</a></li><li><a href="/date/2025-04/page-3.htm">3</a></li> <li><a href="/date/2025-04/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-87755.htm" title="同安宠物领养中心在哪里啊最近（同安哪里有宠物店的地方）">同安宠物领养中心在哪里啊最近（同安哪里有宠物店的地方）</a></li>
-                        <li class="py-2"><a href="/news/article-75175.htm" title="读取spring的配置来定义常量">读取spring的配置来定义常量</a></li>
-                        <li class="py-2"><a href="/news/article-73151.htm" title="AndroidQ(10)黑暗模式适配">AndroidQ(10)黑暗模式适配</a></li>
-                        <li class="py-2"><a href="/news/article-89955.htm" title="宠物粮食加工厂设备哪的好点呢知乎 宠物粮食加工厂设备哪的好点呢知乎">宠物粮食加工厂设备哪的好点呢知乎 宠物粮食加工厂设备哪的好点呢知乎</a></li>
-                        <li class="py-2"><a href="/news/article-91376.htm" title="一、重写了equals为什么还要重写hashcode">一、重写了equals为什么还要重写hashcode</a></li>
-                        <li class="py-2"><a href="/news/article-81351.htm" title="领养协议书范本宠物狗怎么写（领养协议书范本 宠物）">领养协议书范本宠物狗怎么写（领养协议书范本 宠物）</a></li>
-                        <li class="py-2"><a href="/news/article-82742.htm" title="宠物领养条约（宠物领养条约内容）">宠物领养条约（宠物领养条约内容）</a></li>
+                        <li class="py-2"><a href="/news/article-67295.htm" title="Halo 开源项目学习评论与点赞">Halo 开源项目学习评论与点赞</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-3-node-share.htm" title="VPN设备 | 3月3日18M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 3月3日18M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-77891.htm" title="合肥哪里领养宠物狗（合肥哪里领养宠物狗比较好）">合肥哪里领养宠物狗（合肥哪里领养宠物狗比较好）</a></li>
-                        <li class="py-2"><a href="/news/article-90693.htm" title="厦门宠物收养中心在哪（厦门宠物领养中心地址）">厦门宠物收养中心在哪（厦门宠物领养中心地址）</a></li>
-                        <li class="py-2"><a href="/news/article-89954.htm" title="开宠物店累不累人（一般开宠物店挣不挣）">开宠物店累不累人（一般开宠物店挣不挣）</a></li>
+                        <li class="py-2"><a href="/news/article-89236.htm" title="Apache Hudi 如何加速传统的批处理模式">Apache Hudi 如何加速传统的批处理模式</a></li>
+                        <li class="py-2"><a href="/news/article-69855.htm" title="vue中同时监听多个参数的实现_vue.js">vue中同时监听多个参数的实现_vue.js</a></li>
+                        <li class="py-2"><a href="/news/article-91376.htm" title="一、重写了equals为什么还要重写hashcode">一、重写了equals为什么还要重写hashcode</a></li>
+                        <li class="py-2"><a href="/news/article-68547.htm" title="InnoDB的逻辑存储结构是什么，表空间组成包括哪些？_在线工具">InnoDB的逻辑存储结构是什么，表空间组成包括哪些？_在线工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-high-speed-nodes.htm" title="VPN设备 | 3月7日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 3月7日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-75854.htm" title="芭比堂宠物医院前台怎么样啊（芭比堂宠物医院前台怎么样啊知乎）">芭比堂宠物医院前台怎么样啊（芭比堂宠物医院前台怎么样啊知乎）</a></li>
+                        <li class="py-2"><a href="/news/article-80628.htm" title="动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）">动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
