--- a/date/2025-04/page-2.htm
+++ b/date/2025-04/page-2.htm
@@ -113,6 +113,96 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-07">
+                            <div class="col-md-3">
+                                <a href="/news/article-90692.htm" class="xcblog-blog-url">
+                                    <img alt="动物疫苗要打几针才有效呢 动物疫苗要打几针才有效呢视频" src="/uploads/20241222-1/a6739d732704eaa23f08687f69677fcf.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-90692.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        动物疫苗要打几针才有效呢 动物疫苗要打几针才有效呢视频                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗要打几针才有效呢的问题，于是小编就整理了3个相关介绍动物疫苗要打几针才有效呢的解答，让我们一起看看吧。小鹿犬多久打一次防                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、欧洲、日本、香港、美国、加拿大、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                            <div class="col-md-3">
+                                <a href="/news/article-89955.htm" class="xcblog-blog-url">
+                                    <img alt="宠物粮食加工厂设备哪的好点呢知乎 宠物粮食加工厂设备哪的好点呢知乎" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-89955.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        宠物粮食加工厂设备哪的好点呢知乎 宠物粮食加工厂设备哪的好点呢知乎                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物粮食加工厂设备哪的好点呢知乎的问题，于是小编就整理了2个相关介绍宠物粮食加工厂设备哪的好点呢知乎的解答，让我们一起看看吧。训                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                            <div class="col-md-3">
+                                <a href="/news/article-89954.htm" class="xcblog-blog-url">
+                                    <img alt="开宠物店累不累人（一般开宠物店挣不挣）" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-89954.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        开宠物店累不累人（一般开宠物店挣不挣）                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享开宠物店累不累人的知识，其中也会对一般开宠物店挣不挣进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、说说开宠物店是种怎样的体.                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、新加坡、欧洲、韩国、美国、日本、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-05">
+                            <div class="col-md-3">
+                                <a href="/news/article-89236.htm" class="xcblog-blog-url">
+                                    <img alt="Apache Hudi 如何加速传统的批处理模式" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-89236.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        Apache Hudi 如何加速传统的批处理模式                                    </h3>
+                                </a>
+                                <p>
+                                    1.1 数据湖摄取和计算过程 - 处理更新 在我们的用例中1-10% 是对历史记录的更新。当记录更新时，我们需要从之前的 updated_date 分区中删除之前的条目，并将条目添加到最新的分区中，在                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-05">
                             <div class="col-md-3">
                                 <a href="/news/article-89235.htm" class="xcblog-blog-url">
@@ -173,96 +263,6 @@
                                     摘要：       本篇文章给大家谈谈上海宠物领养站电话地址，以及上海宠物领养站电话地址是多少对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、上海哪里有真心救流浪狗地方?...                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-04">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、加拿大、韩国、日本、美国、香港、欧洲等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
-                            <div class="col-md-3">
-                                <a href="/news/article-87755.htm" class="xcblog-blog-url">
-                                    <img alt="同安宠物领养中心在哪里啊最近（同安哪里有宠物店的地方）" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-87755.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        同安宠物领养中心在哪里啊最近（同安哪里有宠物店的地方）                                    </h3>
-                                </a>
-                                <p>
-                                    摘要：       今天给各位分享同安宠物领养中心在哪里啊最近的知识，其中也会对同安哪里有宠物店的地方进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、同城宠物.                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
-                            <div class="col-md-3">
-                                <a href="/news/article-87754.htm" class="xcblog-blog-url">
-                                    <img alt="宠物店亏本了怎么办（现在宠物店生意亏死）" src="/uploads/20241222-1/a621dbd095b5853e39cd840d5e02d439.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-87754.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        宠物店亏本了怎么办（现在宠物店生意亏死）                                    </h3>
-                                </a>
-                                <p>
-                                    摘要：       今天给各位分享宠物店亏本了怎么办的知识，其中也会对现在宠物店生意亏死进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、最近梦幻西游里开了10.                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、韩国、香港、欧洲、日本、美国、新加坡等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
-                            <div class="col-md-3">
-                                <a href="/news/article-87041.htm" class="xcblog-blog-url">
-                                    <img alt="兽药安泰又叫什么（兽药安泰又叫什么名字）" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-87041.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        兽药安泰又叫什么（兽药安泰又叫什么名字）                                    </h3>
-                                </a>
-                                <p>
-                                    摘要：       今天给各位分享兽药安泰又叫什么的知识，其中也会对兽药安泰又叫什么名字进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、康乐生物有治疗鸭浆膜炎.                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
-                            <div class="col-md-3">
-                                <a href="/news/article-87039.htm" class="xcblog-blog-url">
-                                    <img alt="劳动节福利~ 我给大家写了个博客园快速发文工具_在线工具" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-87039.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        劳动节福利~ 我给大家写了个博客园快速发文工具_在线工具                                    </h3>
-                                </a>
-                                <p>
-                                    昨天五一， 广州暴雨一整天； 我本想发一篇之前写好的博客园随笔，用的是晓晨大佬写的dotnet-cnblogs-tool，不过报了个错：  用的是公司的电脑，我自己电脑装旧版本的是没有问题的，本想想拉                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li><a href="/date/2025-04/">&laquo;</a></li> <li><a href="/date/2025-04/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-04/page-3.htm">3</a></li> <li><a href="/date/2025-04/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-67295.htm" title="Halo 开源项目学习评论与点赞">Halo 开源项目学习评论与点赞</a></li>
-                        <li class="py-2"><a href="/news/article-82741.htm" title="宠物医院猫打疫苗多少钱（宠物医院猫疫苗多少钱一针）">宠物医院猫打疫苗多少钱（宠物医院猫疫苗多少钱一针）</a></li>
-                        <li class="py-2"><a href="/news/article-67292.htm" title="有限体积法求解一维非稳态对流扩散方程">有限体积法求解一维非稳态对流扩散方程</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-v2ray-subscribe.htm" title="VPN设备 | 3月29日22.5M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 3月29日22.5M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-78570.htm" title="将文件转成base64 字符串">将文件转成base64 字符串</a></li>
-                        <li class="py-2"><a href="/news/article-91376.htm" title="一、重写了equals为什么还要重写hashcode">一、重写了equals为什么还要重写hashcode</a></li>
-                        <li class="py-2"><a href="/news/article-69857.htm" title="动物医院叫什么名字好听的（动物医院名称大全）">动物医院叫什么名字好听的（动物医院名称大全）</a></li>
-                        <li class="py-2"><a href="/news/article-80628.htm" title="动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）">动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）</a></li>
-                        <li class="py-2"><a href="/news/article-86326.htm" title="vue实现列表垂直无缝滚动_vue.js">vue实现列表垂直无缝滚动_vue.js</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-node-subscribe.htm" title="VPN设备 | 3月28日20.6M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 3月28日20.6M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-85613.htm" title="动物医院诊疗活动范围（动物医院价目表）">动物医院诊疗活动范围（动物医院价目表）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" title="VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-88500.htm" title="上海宠物领养站电话地址（上海宠物领养站电话地址是多少）">上海宠物领养站电话地址（上海宠物领养站电话地址是多少）</a></li>
+                        <li class="py-2"><a href="/news/article-72483.htm" title="python内置函数有哪些？">python内置函数有哪些？</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN设备 | 3月18日22.8M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 3月18日22.8M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-76527.htm" title="如何使用线程池执行定时任务？">如何使用线程池执行定时任务？</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-v2ray.htm" title="VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-clash-v2ray-ss-ssr.htm" title="VPN设备 | 3月26日19.7M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 3月26日19.7M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-5-clash-v2ray-ss-ssr.htm" title="VPN设备 | 3月5日21M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月5日21M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-88501.htm" title="元旦送什么礼物给客户(元旦送客户什么比较好)">元旦送什么礼物给客户(元旦送客户什么比较好)</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
