--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -442,82 +442,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank"><b>KK加速</b></a>
-                                </div>
-                                <div class="panel-body">
-                                    
-                                    <dl>
-                                        <dt>资费</dt>
-                                                                                <dd>
-                                            <p>
-                                                <label>Pro | 不限时：</label> ¥68.00 /一次性。 
-                                                                                                不限时200G高速流量; 
-                                                                                                不限速，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>Air | 不限时：</label> ¥38.00 /一次性。 
-                                                                                                不限时100G高速流量; 
-                                                                                                不限速，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>专业级：</label> ¥18.00 /每月。 
-                                                                                                每月500G高速流量; 
-                                                                                                1Gbps带宽，畅享极速网络; 
-                                                                                                仅限小团体使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>体验级：</label> ¥8.00 /每月。 
-                                                                                                每月168G高速流量; 
-                                                                                                300Mbps带宽，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>体验级：</label> ¥8.00 /每月。 
-                                                                                                每月168G高速流量; 
-                                                                                                300Mbps带宽，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                            </dl>
-                                </div>
-                                <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank">点击查看</a>
-                                </div>
-                            </div>
-                            <hr />
-                                                        <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -559,7 +484,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -626,16 +551,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-78570.htm" title="将文件转成base64 字符串">将文件转成base64 字符串</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-high-speed-nodes.htm" title="VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-87041.htm" title="兽药安泰又叫什么（兽药安泰又叫什么名字）">兽药安泰又叫什么（兽药安泰又叫什么名字）</a></li>
-                        <li class="py-2"><a href="/news/article-82031.htm" title="成都市免费领养狗狗地址查询（成都市免费领养狗狗地址查询电话）">成都市免费领养狗狗地址查询（成都市免费领养狗狗地址查询电话）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-6-free-v2ray-subscribe.htm" title="VPN设备 | 3月6日21M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 3月6日21M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-90692.htm" title="动物疫苗要打几针才有效呢 动物疫苗要打几针才有效呢视频">动物疫苗要打几针才有效呢 动物疫苗要打几针才有效呢视频</a></li>
-                        <li class="py-2"><a href="/news/article-83459.htm" title="mysql中时间的储存方式_如何在MySQL 中存储日期？">mysql中时间的储存方式_如何在MySQL 中存储日期？</a></li>
-                        <li class="py-2"><a href="/news/article-84166.htm" title="1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）">1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）</a></li>
-                        <li class="py-2"><a href="/news/article-91376.htm" title="一、重写了equals为什么还要重写hashcode">一、重写了equals为什么还要重写hashcode</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-9-free-v2ray.htm" title="VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-8-node-share-links.htm" title="VPN设备 | 3月8日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 3月8日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-15-node-share.htm" title="VPN设备 | 3月15日20.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月15日20.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-92172.htm" title="3.	Springmvc架构">3.	Springmvc架构</a></li>
+                        <li class="py-2"><a href="/news/article-69208.htm" title="西蓝花这样做,超级好吃,怎么做(西蓝花怎么做?)">西蓝花这样做,超级好吃,怎么做(西蓝花怎么做?)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-node-subscribe.htm" title="VPN设备 | 3月28日20.6M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 3月28日20.6M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-69207.htm" title="华畜兽药是哪个公司的（华畜兽药可排第几名）">华畜兽药是哪个公司的（华畜兽药可排第几名）</a></li>
+                        <li class="py-2"><a href="/news/article-76527.htm" title="如何使用线程池执行定时任务？">如何使用线程池执行定时任务？</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-1-free-v2ray.htm" title="VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-84887.htm" title="今年公务员国考人数（今年国考人数多少）">今年公务员国考人数（今年国考人数多少）</a></li>
+                        <li class="py-2"><a href="/news/article-70522.htm" title="哪些属相不适合养狗狗（哪些属相不能养狗狗）">哪些属相不适合养狗狗（哪些属相不能养狗狗）</a></li>
                     </ul>
     </div>
 </div>
@@ -647,7 +572,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
