--- a/date/2025-04/page-3.htm
+++ b/date/2025-04/page-3.htm
@@ -113,6 +113,96 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、加拿大、韩国、日本、美国、香港、欧洲等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-87755.htm" class="xcblog-blog-url">
+                                    <img alt="同安宠物领养中心在哪里啊最近（同安哪里有宠物店的地方）" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-87755.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        同安宠物领养中心在哪里啊最近（同安哪里有宠物店的地方）                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享同安宠物领养中心在哪里啊最近的知识，其中也会对同安哪里有宠物店的地方进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、同城宠物.                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-87754.htm" class="xcblog-blog-url">
+                                    <img alt="宠物店亏本了怎么办（现在宠物店生意亏死）" src="/uploads/20241222-1/a621dbd095b5853e39cd840d5e02d439.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-87754.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        宠物店亏本了怎么办（现在宠物店生意亏死）                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享宠物店亏本了怎么办的知识，其中也会对现在宠物店生意亏死进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、最近梦幻西游里开了10.                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、香港、欧洲、日本、美国、新加坡等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                            <div class="col-md-3">
+                                <a href="/news/article-87041.htm" class="xcblog-blog-url">
+                                    <img alt="兽药安泰又叫什么（兽药安泰又叫什么名字）" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-87041.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        兽药安泰又叫什么（兽药安泰又叫什么名字）                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享兽药安泰又叫什么的知识，其中也会对兽药安泰又叫什么名字进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、康乐生物有治疗鸭浆膜炎.                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                            <div class="col-md-3">
+                                <a href="/news/article-87039.htm" class="xcblog-blog-url">
+                                    <img alt="劳动节福利~ 我给大家写了个博客园快速发文工具_在线工具" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-87039.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        劳动节福利~ 我给大家写了个博客园快速发文工具_在线工具                                    </h3>
+                                </a>
+                                <p>
+                                    昨天五一， 广州暴雨一整天； 我本想发一篇之前写好的博客园随笔，用的是晓晨大佬写的dotnet-cnblogs-tool，不过报了个错：  用的是公司的电脑，我自己电脑装旧版本的是没有问题的，本想想拉                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-02">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -183,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-v2ray-subscribe.htm" title="VPN设备 | 3月10日21.8M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 3月10日21.8M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-71828.htm" title="狗粮加工厂设备有哪些（狗粮加工厂需要什么手续）">狗粮加工厂设备有哪些（狗粮加工厂需要什么手续）</a></li>
-                        <li class="py-2"><a href="/news/article-87754.htm" title="宠物店亏本了怎么办（现在宠物店生意亏死）">宠物店亏本了怎么办（现在宠物店生意亏死）</a></li>
-                        <li class="py-2"><a href="/news/article-76527.htm" title="如何使用线程池执行定时任务？">如何使用线程池执行定时任务？</a></li>
-                        <li class="py-2"><a href="/news/article-84165.htm" title="原型模式在实际开发中的应用BeanUtils">原型模式在实际开发中的应用BeanUtils</a></li>
-                        <li class="py-2"><a href="/news/article-67906.htm" title="动物疫苗有没有毒性成分组成（动物疫苗的重要性）">动物疫苗有没有毒性成分组成（动物疫苗的重要性）</a></li>
-                        <li class="py-2"><a href="/news/article-69855.htm" title="vue中同时监听多个参数的实现_vue.js">vue中同时监听多个参数的实现_vue.js</a></li>
-                        <li class="py-2"><a href="/news/article-82032.htm" title="宠物粮食加工厂好做吗知乎文章怎么写 宠物粮食加工厂好做吗知乎文章怎么写的">宠物粮食加工厂好做吗知乎文章怎么写 宠物粮食加工厂好做吗知乎文章怎么写的</a></li>
+                        <li class="py-2"><a href="/news/article-73820.htm" title="领养宠物狗的流程图（领养宠物须知）">领养宠物狗的流程图（领养宠物须知）</a></li>
+                        <li class="py-2"><a href="/news/article-71162.htm" title="简单聊一聊Vue3组件更新过程_vue.js">简单聊一聊Vue3组件更新过程_vue.js</a></li>
+                        <li class="py-2"><a href="/news/article-80628.htm" title="动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）">动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-8-free-node-subscribe.htm" title="VPN设备 | 4月8日21.4M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 4月8日21.4M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-92172.htm" title="3.	Springmvc架构">3.	Springmvc架构</a></li>
+                        <li class="py-2"><a href="/news/article-70522.htm" title="哪些属相不适合养狗狗（哪些属相不能养狗狗）">哪些属相不适合养狗狗（哪些属相不能养狗狗）</a></li>
+                        <li class="py-2"><a href="/news/article-66661.htm" title="开动物医院什么资质可以开药（开动物医院什么资质可以开药店）">开动物医院什么资质可以开药（开动物医院什么资质可以开药店）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-9-free-v2ray.htm" title="VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-85614.htm" title="北京领养狗的有哪些地方啊（北京领养狗狗的地方在哪里）">北京领养狗的有哪些地方啊（北京领养狗狗的地方在哪里）</a></li>
                         <li class="py-2"><a href="/news/article-70525.htm" title="动物疫苗品牌排名（动物疫苗品牌排名前十名）">动物疫苗品牌排名（动物疫苗品牌排名前十名）</a></li>
-                        <li class="py-2"><a href="/news/article-82742.htm" title="宠物领养条约（宠物领养条约内容）">宠物领养条约（宠物领养条约内容）</a></li>
                     </ul>
     </div>
 </div>
@@ -204,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
